# storage/api-docs/api-docs.json
@@ -155,6 +155,36 @@
                 }
             }
         },
+        "/api/v1/auth/password/reset": {
+            "patch": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "password/reset",
+                "operationId": "68c5313de5c6ca32b64b5a4777b0f524",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
+            }
+        },
         "/api/v1/auth/register": {
             "post": {
                 "tags": [
@@ -189,6 +219,22 @@
                     },
                     {
                         "name": "phone",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "country_code",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "country_id",
                         "in": "query",
                         "required": true,
                         "schema": {
@@ -278,61 +324,6 @@
                     },
                     "403": {
                         "description": "Forbidden"
-                    }
-                }
-            }
-        },
-        "/api/v1/get-profile": {
-            "get": {
-                "tags": [
-                    "Profile"
-                ],
-                "summary": "get-profile",
-                "operationId": "get-profile",
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    }
-                },
-                "security": [
-                    {
-                        "bearer_token": []
-                    }
-                ]
-            }
-        },
-        "/api/v1/auth/password/reset": {
-            "patch": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "password/reset",
-                "operationId": "68c5313de5c6ca32b64b5a4777b0f524",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
                     }
                 }
             }
@@ -460,7 +451,7 @@
         "/api/v1/restaurants/items": {
             "post": {
                 "tags": [
-                    "Restaurants Items"
+                    "Restaurants"
                 ],
                 "summary": "Get Restaurants Items.",
                 "operationId": "61030e6d25fa11111024fe1c846ed17a",
@@ -517,69 +508,10 @@
                 ]
             }
         },
-        "/api/v1/users/update-profile": {
-            "post": {
-                "tags": [
-                    "Update Profile"
-                ],
-                "summary": "update-profile",
-                "operationId": "03078e874a13ef89d41c46ee4650e397",
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "phone",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "phone2",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "birth_date",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    }
-                },
-                "security": [
-                    {
-                        "bearer_token": []
-                    }
-                ]
-            }
-        },
         "/api/v1/users/change-password": {
             "patch": {
                 "tags": [
-                    "Authentication"
+                    "Users"
                 ],
                 "summary": "change-password",
                 "operationId": "dc035b9dac6cd589ab30a746d0dbb56f",
@@ -622,10 +554,10 @@
         "/api/v1/users/favourite": {
             "post": {
                 "tags": [
-                    "Favourite and unfavourite items"
+                    "Users"
                 ],
-                "summary": "favourite-and-unfavourite-items",
-                "operationId": "11780d8750066c7549b5d3c9c3aaf335",
+                "summary": "User's Favourite Items",
+                "operationId": "a7f99e4c5884c8ec20add04591bd47e0",
                 "parameters": [
                     {
                         "name": "restaurant_item_id",
@@ -633,6 +565,90 @@
                         "required": true,
                         "schema": {
                             "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/users/get-profile": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "get-profile",
+                "operationId": "get-profile",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/users/update-profile": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "update-profile",
+                "operationId": "03078e874a13ef89d41c46ee4650e397",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "phone",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "phone2",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "birth_date",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 ],
